added conditional validation